--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html ng-app="myFriends" ng-controller="friendController" >
 <head>
 <script src='http://code.jquery.com/jquery-1.10.2.js' type='text/javascript'></script>
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
@@ -16,38 +16,42 @@
 <title>Facebook Lesson 18</title>
 </head>
 
-<body>
+<body >
 
 <h1>The <strong>facebook</strong> Friend Machine</h1>
 
 <div class="friends">
 
-
 <form class="form-inline searchForm" role="form">
   <div class="form-group">
+    
+      
 
-  <input class="form-control" placeholder="Search Anything About Your Friends" >
+
+ <input class="form-control" placeholder="Search Your Friends' Name" ng-model="searchName">
+   <input class="form-control" placeholder="Search Your Freinds' Location" ng-model="searchLoc">
   <!-- The stuff below is For step 5....get rid of the one above if you wish-->
 <!--    
     <input class="form-control" placeholder="Search Your Friends' Name" >
     <input class="form-control" placeholder="Search Your Freinds' Location" > 
  -->
-    <select class="input-medium">
-        <option>Name</option>
-        <option># friends</option>
-        <option>City</option>
-        <option>State</option>
-        <option>Country</option>
+
+    <select class="input-medium" ng-model="sortField" ng-options="list.value as list.shown for list in list">
+        <option value="name">Name</option>
+        <option value="friend_count"># friends</option>
+        <option value="current_location.city">City</option>
+        <option value="current_location.state">State</option>
+        <option value="current_location.country">Country</option>
     </select>
-    <select class="input-medium">
-        <option value="false">Descending</option>
-        <option value="true">Ascending</option>
+    <select class="input-medium" ng-model="ascDes">
+        <option value="true">Descending</option>
+        <option value="false">Ascending</option>
     </select>
   </div>
 </form>
 
   <ul>
-    <li class='friend'>
+    <li class='friend' >
        <img class="profile-pic" src='https://scontent-a.xx.fbcdn.net/hprofile-ash3/833_10200838803828124_1233160321_a.jpg'>
       <h3>Cali Fornia</h3>
       <div class="location">
@@ -61,6 +65,26 @@
       </div>
     </li>
   </ul>
+
+  <div ng-repeat="friend in friends | filter: {name: searchName} | filter: {current_location.name: searchLoc} | orderBy: sortField:ascDes">
+    <ul>
+      <li class='friend'>
+         <img class="profile-pic" ng-src="{{friend.pic_square}}">
+        <h3>{{friend.name}}</h3>
+        <div class="location">
+          {{friend.current_location.city}} {{friend.current_location.state}} {{friend.current_location.country}}
+        </div>      
+        <div class="status">
+        <br/>
+          {{friend.status.message}}
+
+        </div>      
+        <div class="num-friends">
+          Friends: {{friend.friend_count}}
+        </div>
+      </li>
+    </ul>
+  </div>
 </div>
 
 
